fixed spacing on currency selection popup

--- a/src/sass/modals.scss
+++ b/src/sass/modals.scss
@@ -295,7 +295,6 @@
   padding: 20px;
   text-transform: uppercase;
   form {
-    overflow: auto;
     min-height: 100px;
   }
   // TODO: DOUBLE CHECK WHAT NEEDS CENTERED VS LEFT
